--- a/index.html
+++ b/index.html
@@ -10,12 +10,17 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=DynaPuff:wght@400..700&family=Frijole&family=Galindo&family=Lilita+One&family=Oregano:ital@0;1&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Protest+Strike&display=swap"
+        href="https://fonts.googleapis.com/css2?family=DynaPuff:wght@400..700&family=Frijole&family=Galindo&family=Lilita+One&family=Oregano:ital@0;1&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Protest+Strike&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto+Slab:wght@100..900&display=swap"
         rel="stylesheet">
+
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <header>
 
         <!-- nav bar -->
@@ -48,10 +53,11 @@
                                 alt="linkedin"></a>
                     </div>
                     <div>
-                        <img src="https://www.rammaheshwari.com/assets/svg/twitter-dark.svg" alt="linkedin"></a>
+                        <a href=""><img src="https://www.rammaheshwari.com/assets/svg/twitter-dark.svg"
+                                alt="linkedin"></a>
                     </div>
                     <div>
-                        <img src="https://www.rammaheshwari.com/assets/svg/book-dark.svg" alt="linkedin"></a>
+                        <a href=""><img src="https://www.rammaheshwari.com/assets/svg/book-dark.svg" alt="linkedin"></a>
                     </div>
                 </div>
 
@@ -79,57 +85,110 @@
             </div>
             </div>
         </section>
-        <section class="firstsection">About Me</section>
-        <div class="intro">
-            <div class="leftsection">
-                <div>
-                    <button class="info">Info</button>
-                </div>
-                <div class="infoabout">
-                    <p>
-                        I'm a Full Stack
-                        <span>Web Developer</span>
-                        building Websites and Web Applications that leads to the
-                        success of the overall product. Check out some of my work in the
-                        <span>Projects</span>
-                        section.
+        <div class="scroll-animate">
+            <section class="firstsection">
+                <div class="section-title">About Me</div>
+            </section>
+            <div class="intro">
+                <div class="leftsection">
+                    <div>
+                        <button class="info">Info</button>
+                    </div>
+                    <div class="infoabout">
+                        <p>
+                            I'm a Full Stack
+                            <span>Web Developer</span>
+                            building Websites and Web Applications that leads to the
+                            success of the overall product. Check out some of my work in the
+                            <span>Projects</span>
+                            section.
 
-                        I also like sharing content related to the stuff that I have learned over the years in <span>Web
-                            Developement</span>
-                        so it can help other people of the Dev Community. Feel free to Connect or Follow
-                        me on my Linkedin where I post useful content related to Web Development and Programming
+                            I also like sharing content related to the stuff that I have learned over the years in
+                            <span>Web
+                                Developement</span>
+                            so it can help other people of the Dev Community. Feel free to Connect or Follow
+                            me on my Linkedin where we can discuss useful content related to Web Development and
+                            Programming
 
-                        I'm open to
-                        <span>Job</span>
-                        opportunities where I can contribute, learn and grow. If you have a good
-                        opportunity that matches my skills and experience then don't hesitate to
-                        <span>Contact me</span>.
-                    </p>
+                            I'm open to
+                            <span>Job</span>
+                            opportunities where I can contribute, learn and grow. If you have a good
+                            opportunity that matches my skills and experience then don't hesitate to
+                            <span>Contact me</span>.
+                        </p>
+                    </div>
                 </div>
-            </div>
-            <div class="rightsection">
-                <div>
-                    <button class="info">Skills</button>
+                <div class="rightsection">
+                    <div>
+                        <button class="info">Skills</button>
+                    </div>
+                    <div class="skillgrid">
+                        <button>HTML</button>
+                        <button>CSS</button>
+                        <button>Jquery</button>
+                        <button>Vanilla JS</button>
+                        <button>Python</button>
+                        <button>Ms. Office</button>
+                        <button>Desktop Support</button>
+                        <button>Computer Networking</button>
+                        <button>Computer Troubleshooting</button>
+                        <button>Client Support</button>
+                    </div>
                 </div>
-                <div class="skillgrid">
-                    <button>HTML</button>
-                    <button>CSS</button>
-                    <button>Jquery</button>
-                    <button>java</button>
-                    <button>Ms. Office</button>
-                    <button>Desktop Support</button>
-                    <button>Computer Networking</button>
-                    <button>Computer Troubleshooting</button>
-                    <button>Client Support</button>
-                </div>
-            </div>
-        </div>
-        </section>
-        <!-- <div>
-            <h1>Project</h1>
-        </div> -->
+                </section>
     </main>
+    <div class="scroll-animate">
+    <div class="project_card">
+        <h1 class="porject">Project</h1>
+        <section class="cards">
+            <article class="card card--1">
+                <a href="">
+                    <div class="card__img"></div>
+                    <a href="#" class="card_link">
+                        <div class="card__img--hover"></div>
+                    </a>
+                    <div class="card__info">
+                        <span class="card__category"> PROJECT 1</span>
+                        <h3 class="card__title">Clone Website of Conjoint INC.</h3>
+                        <span class="card__by">by <a href="#" class="card__author" title="author">Samar
+                                Maurya</a></span>
+                    </div>
+                </a>
+            </article>
 
+            <article class="card card--2">
+                <a href="">
+                    <div class="card__img"></div>
+                    <a href="#" class="card_link">
+                        <div class="card__img--hover"></div>
+                    </a>
+                    <div class="card__info">
+                        <span class="card__category"> PROJECT 2</span>
+                        <h3 class="card__title">Hospital Managemnet System</h3>
+                        <span class="card__by">by <a href="#" class="card__author" title="author">Samar
+                                maurya</a></span>
+                    </div>
+                </a>
+            </article>
+            <article class="card card--3">
+                <a href="">
+                    <div class="card__img"></div>
+                    <a href="#" class="card_link">
+                        <div class="card__img--hover"></div>
+                    </a>
+                    <div class="card__info">
+                        <span class="card__category"> PROJECT 3</span>
+                        <h3 class="card__title">PortFolio For Student</h3>
+                        <span class="card__by">by <a href="#" class="card__author" title="author">Samar
+                                Maurya</a></span>
+                    </div>
+                </a>
+            </article>
+        </section>
+    </div>
+    </div>
+    </div>
+    </div>
     <footer>
         <div id="contact">
             <div class="container">
@@ -141,15 +200,15 @@
 
                         <p><i class="fa-solid fa-envelope"></i>samarmaurya999@gmail.com</p>
                         <p><i class="fa-solid fa-phone"></i>8010616760 , 9315445849</p>
-                        <p><i class="fa fa-whatsapp" style="font-size:48px;color:rgb(16, 151, 46)"></i>8010616760</p>
+                        <p><i class="fa-brands fa-whatsapp"></i>8010616760</p>
                         <div class="social-icons">
                             <a href="https://www.linkedin.com/"><i class="fa-brands fa-linkedin"></i></a>
                             <a href="https://github.com/sammy-ops"><i class="fa-brands fa-github"></i></a>
-                            <a href="https://hashnode.com/"><i class="fa-brands fa-hashnode"></i></a>
-                            <a href="https://leetcode.com/"><img src="" alt="LeetCode Icon" width="24" height="24">
-                            </a>
+                            <!-- <a href="https://hashnode.com/"><i class="fa-brands fa-hashnode"></i></a>
+                            <a href="https://leetcode.com/"><img src="" alt="LeetCode Icon" width="24" height="24"> -->
+                            <!-- </a>
                             <a href="https://www.codingninjas.com/"><img src="images/codingninjas.svg"
-                                    alt="CodinfNinjas Icon" width="24" height="24">
+                                    alt="CodinfNinjas Icon" width="24" height="24"> -->
                             </a>
                             <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook"></i></a>
                         </div>
@@ -177,10 +236,70 @@
 
 
             <div class="copyright">
-                <p>Copyright © Samar. Made with<i class="fa fa-heart-o" style="font-size:48px;color:red"></i> by Samar Maurya</p>
+                <p>Copyright © Samar. Made<i class="fa fa-heart-o" style="font-size:48px;color:red"></i> by Samar
+                    Maurya</p>
             </div>
         </div>
     </footer>
+
+
+    <script>
+
+        const animatedElements = document.querySelectorAll('.scroll-animate');
+
+        window.addEventListener('scroll', () => {
+            const scrollY = window.scrollY;
+
+            animatedElements.forEach(el => {
+                const rect = el.getBoundingClientRect();
+                const triggerPoint = window.innerHeight - 100;
+
+                // If element is in view
+                if (rect.top < triggerPoint) {
+                    el.classList.add('visible');
+                }
+            });
+
+            // Reset all animations when user scrolls back to top
+            if (scrollY === 0) {
+                animatedElements.forEach(el => {
+                    el.classList.remove('visible');
+                });
+            }
+        });
+
+        $(document).ready(function () {
+
+            // Smooth scroll for nav links
+            $('nav ul li').on('click', function () {
+                let section = $(this).text().toLowerCase().replace(/\s+/g, '');
+                let target = '';
+
+                if (section === 'home') {
+                    target = 'header';
+                } else if (section === 'about') {
+                    target = '.firstsection';
+                } else if (section === 'project') {
+                    target = '#projects'; // Adjust this if you have a projects section
+                } else if (section === 'contactme') {
+                    target = '#contact';
+                }
+
+                if ($(target).length) {
+                    $('html, body').animate({
+                        scrollTop: $(target).offset().top
+                    }, 800);
+                }
+            });
+
+            // Back to top button scroll
+            $('#up-arrow-btn').click(function () {
+                $('html, body').animate({ scrollTop: 0 }, 800);
+            });
+
+        });
+    </script>
+
 </body>
 
 </html>
