--- a/index.html
+++ b/index.html
@@ -45,19 +45,19 @@
             <div class="socialinfo">
                 <div class="social">
                     <div>
-                        <a href=""><img src="https://www.rammaheshwari.com/assets/svg/linkedin-dark.svg"
+                        <a href="https://www.linkedin.com/in/samar-maurya-709419234/"><img src="https://www.rammaheshwari.com/assets/svg/linkedin-dark.svg"
                                 alt="linkedin"></a>
                     </div>
                     <div>
-                        <a href=""><img src="https://www.rammaheshwari.com/assets/svg/github-dark.svg"
-                                alt="linkedin"></a>
+                        <a href="https://github.com/sammy-ops"><img src="https://www.rammaheshwari.com/assets/svg/github-dark.svg"
+                                alt="github"></a>
                     </div>
                     <div>
                         <a href=""><img src="https://www.rammaheshwari.com/assets/svg/twitter-dark.svg"
-                                alt="linkedin"></a>
+                                alt="X"></a>
                     </div>
                     <div>
-                        <a href=""><img src="https://www.rammaheshwari.com/assets/svg/book-dark.svg" alt="linkedin"></a>
+                        <a href=""><img src="https://www.rammaheshwari.com/assets/svg/book-dark.svg" alt="darkbook"></a>
                     </div>
                 </div>
 
@@ -142,7 +142,7 @@
         <h1 class="porject">Project</h1>
         <section class="cards">
             <article class="card card--1">
-                <a href="">
+                <a href="https://github.com/sammy-ops/website">
                     <div class="card__img"></div>
                     <a href="#" class="card_link">
                         <div class="card__img--hover"></div>
@@ -171,7 +171,7 @@
                 </a>
             </article>
             <article class="card card--3">
-                <a href="">
+                <a href="https://github.com/sammy-ops/Portfolio">
                     <div class="card__img"></div>
                     <a href="#" class="card_link">
                         <div class="card__img--hover"></div>
@@ -184,6 +184,19 @@
                     </div>
                 </a>
             </article>
+            <article class="card card--4">
+                <a href="https://github.com/sammy-ops/rock-paper-scissors">
+                    <div class="card__img"></div>
+                    <a href="#" class="card_link">
+                        <div class="card__img--hover"></div>
+                    </a>
+                    <div class="card__info">
+                        <span class="card__category"> PROJECT 4</span>
+                        <h3 class="card__title">Stone Paper Scissors</h3>
+                        <span class="card__by">by <a href="#" class="card__author" title="author">Samar
+                                maurya</a></span>
+                    </div>
+                </a>
         </section>
     </div>
     </div>
@@ -202,13 +215,8 @@
                         <p><i class="fa-solid fa-phone"></i>8010616760 , 9315445849</p>
                         <p><i class="fa-brands fa-whatsapp"></i>8010616760</p>
                         <div class="social-icons">
-                            <a href="https://www.linkedin.com/"><i class="fa-brands fa-linkedin"></i></a>
+                            <a href="https://www.linkedin.com/in/samar-maurya-709419234/"><i class="fa-brands fa-linkedin"></i></a>
                             <a href="https://github.com/sammy-ops"><i class="fa-brands fa-github"></i></a>
-                            <!-- <a href="https://hashnode.com/"><i class="fa-brands fa-hashnode"></i></a>
-                            <a href="https://leetcode.com/"><img src="" alt="LeetCode Icon" width="24" height="24"> -->
-                            <!-- </a>
-                            <a href="https://www.codingninjas.com/"><img src="images/codingninjas.svg"
-                                    alt="CodinfNinjas Icon" width="24" height="24"> -->
                             </a>
                             <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook"></i></a>
                         </div>
